# times_tables

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  fly.toml
core/: Cargo.toml
core/src/: lib.rs  problem.rs  spaced_rep.rs
desktop/: Cargo.toml
desktop/src/: app.rs  main.rs  storage.rs
server/: Cargo.toml
server/src/: main.rs
server/static/: app.js  index.html  style.css
src/: app.rs  main.rs  problem.rs  spaced_rep.rs  storage.rs
times-tables-web/: .env.example  package-lock.json  package.json
times-tables-web/prisma/: schema.prisma
times-tables-web/src/app/: layout.tsx  page.tsx
times-tables-web/src/app/api/answer/: route.ts
times-tables-web/src/app/api/next-problem/: route.ts
times-tables-web/src/app/api/reset/: route.ts
times-tables-web/src/app/practice/: page.tsx
times-tables-web/src/lib/: auth.ts  spaced-rep.ts
