[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "desktop"
path = "src/main.rs"

[dependencies]
tt_core = { path = "../core" }
eframe = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
